--- a/BITBrain/BITBrain/Assets/LaunchScreen.storyboard
+++ b/BITBrain/BITBrain/Assets/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,7 +35,7 @@
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="primary_blue_color"/>
                         <constraints>
                             <constraint firstItem="emy-wD-xaj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="PZG-de-hk2"/>
                             <constraint firstItem="5QU-U2-tu8" firstAttribute="top" secondItem="emy-wD-xaj" secondAttribute="bottom" constant="23" id="Uqq-ez-VEg"/>
@@ -50,5 +51,8 @@
     </scenes>
     <resources>
         <image name="spark_icon_image" width="170.66667175292969" height="170.66667175292969"/>
+        <namedColor name="primary_blue_color">
+            <color red="0.039215686274509803" green="0.53725490196078429" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
